<resources>
    <string name="app_name">Amba Farmers Voice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Amba Farmers Voice</string>
    <string name="second_fragment_label">About Us</string>
    <string name="category_fragment_label">Categories</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_category_fragment">Hello category fragment</string>
    <string name="title_activity_fruit">FruitActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="video_n_categories">Video \n Categories</string>
    <string name="todo">TODO</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
</resources>