<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.ambafamersvoice.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_CategoryFragment"
            app:destination="@id/CategoryFragment" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.ambafamersvoice.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second"/>

    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.ambafamersvoice.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/CategoryFragment"
        android:name="com.example.ambafamersvoice.CategoryFragment"
        android:label="@string/category_fragment_label"
        tools:layout="@layout/fragment_category"/>

</navigation>